--- a/templates/booking.html
+++ b/templates/booking.html
@@ -28,8 +28,8 @@
 
 
             <br><hr><br>
-            <div class="member_info">
             <div class="text19">您的聯絡資訊</div>
+            <div class="member_info">
             聯絡姓名：<input type="text" class="inputMemberName"><br>
             聯絡信箱：<input type="text" class="inputMemberMail"><br>
             手機號碼：<input type="text" class="inputMemberPhone"><br>
@@ -37,11 +37,11 @@
             </div>
 
             <br><hr><br>
-            <div class="member_info">
             <div class="text19">信用卡付款資訊</div>
-            卡片號碼：<div class="tpfield" id="card-number"></div>
-            過期時間：<div class="tpfield" id="card-expiration-date"></div>
-            驗證密碼：<div class="tpfield" id="card-ccv"></div>
+            <div class="card_info">
+            <div>卡片號碼：<div class="tpfield" id="card-number"></div></div><br>
+            <div>過期時間：<div class="tpfield" id="card-expiration-date"></div></div><br>
+            <div>驗證密碼：<div class="tpfield" id="card-ccv"></div></div><br>
             </div>
 
             <br><hr><br>
