--- a/static/css/index.css
+++ b/static/css/index.css
@@ -10,7 +10,7 @@ body{font-weight:bold;}
 .banner_bigtext{font-size:28px;margin-bottom:10px;}
 
 .search_container{display:flex; margin-top:20px;}
-#search_input{width:400px;height:26px;font-weight:bold; border:none; padding: 10px 10px;}
+#search_input{width:400px;height:26px;font-weight:bold; border:none; padding: 10px 10px; color: black;}
 #search_button{width:60px;height:46px;}
 
 .scroll_container {display:flex;margin-top:200px;width:100%;height:20px;}
